--- a/css/main.scss
+++ b/css/main.scss
@@ -34,8 +34,8 @@
 // }
 
 // variables.less
-$theme-primary: #F05F40;
-$theme-dark: #222;
+$theme-primary: #0062B8;
+$theme-dark: #002E5D;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
