start updating details

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>BYU Aeronautics Design Build Fly Team</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>Check out what BYU's AIAA DBF competition team is up to.  We're always looking for new, talented team members.</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Apply Now</a>
         </div>
     </div>
 </header>
