--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,21 +9,21 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary"></i>
-                    <h3>Exceptional Problem Solving</h3>
-                    <p class="text-muted">Excellence is the only acceptable outcome.</p>
+                    <h3>Excellent Engineering</h3>
+                    <p class="text-muted">Every problem has a solution.</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Effetive Teamwork</h3>
                     <p class="text-muted">No engineer left behind!</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-comments wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Clear Communication</h3>
