--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>BYU Aeronautics Design Build Fly Team</h1>
+            <h1>BYU Aeronautics
+                <br>Design Build Fly Team</h1>
             <hr>
             <p>Check out what BYU's AIAA DBF competition team is up to.  We're always looking for new, talented team members.</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Apply Now</a>
