update social medial links

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,15 +13,15 @@
             </a>
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="mailto:{{ site.email }}">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.email }}</p>
+            <a href="https://www.facebook.com/BYUAeronautics/">
+            <i class="fa fa-facebook-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>{{ https://www.facebook.com/BYUAeronautics/ }}</p>
             </a>
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="https://github.com/{{ site.github_username }}">
-            <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.github_username }}</p>
+            <a href="https://www.youtube.com/channel/UCmnTbVgZbn6ZiyyhChcOeZA">
+            <i class="fa fa-youtube-play fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>{{ https://www.youtube.com/channel/UCmnTbVgZbn6ZiyyhChcOeZA }}</p>
             </a>
         </div>
 
