--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -10,7 +10,7 @@
   {% include values.html %}
   {% include portfolio.html %}
   {% include aside.html %}
-  {% include contact.html %}
+  {% include follow.html %}
   {% include scripts.html %}
 </body>
 
