--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
             <h1>BYU Aeronautics
                 <br>Design Build Fly Team</h1>
             <hr>
-            <p>Check out what BYU's AIAA DBF competition team is up to.  We're always looking for new, talented team members.</p>
+            <p>Check out what BYU's AIAA DBF competition team is up to.
+                <br>We're always looking for new, talented team members.</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Apply Now</a>
         </div>
     </div>
