--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,13 +15,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="#welcome"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Guides</a>
+                    <a class="page-scroll" href="#corevalues">Values</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Past Projects</a>
+                    <a class="page-scroll" href="#teams">Sub Teams</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
