--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,9 @@
                     <a class="page-scroll" href="#teams">Sub Teams</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#portfolio">Past Projects</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
             </ul>
