--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,10 +18,10 @@
                     <a class="page-scroll" href="#welcome"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#corevalues">Values</a>
+                    <a class="page-scroll" href="#values">Values</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#teams">Sub Teams</a>
+                    <a class="page-scroll" href="#subteams">Sub Teams</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Past Projects</a>
