--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,6 +8,7 @@
   {% include header.html %}
   <!-- {% include call-to-action.html %} -->
   {% include values.html %}
+  {% include subteams.html %}
   {% include portfolio.html %}
   {% include aside.html %}
   {% include follow.html %}
