attempt top of page button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header>
+<section id="welcome">
     <div class="header-content">
         <div class="header-content-inner">
             <h1>BYU Aeronautics
@@ -9,4 +10,5 @@
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Apply Now</a>
         </div>
     </div>
+</section>
 </header>
