--- a/_includes/subteams.html
+++ b/_includes/subteams.html
@@ -14,11 +14,11 @@
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                Aerodynamics
                             </div>
                         </div>
                     </div>
@@ -29,11 +29,11 @@
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                Structures
                             </div>
                         </div>
                     </div>
@@ -44,11 +44,11 @@
                     <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                Propulsion
                             </div>
                         </div>
                     </div>
@@ -59,11 +59,11 @@
                     <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                Manufacturing
                             </div>
                         </div>
                     </div>
@@ -74,11 +74,11 @@
                     <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                Systems
                             </div>
                         </div>
                     </div>
@@ -89,11 +89,11 @@
                     <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                Graphics
                             </div>
                         </div>
                     </div>
