remove portfolio section

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,7 +9,7 @@
   <!-- {% include call-to-action.html %} -->
   {% include values.html %}
   {% include subteams.html %}
-  {% include portfolio.html %}
+  <!-- {% include portfolio.html %} -->
   {% include aside.html %}
   {% include follow.html %}
   {% include scripts.html %}
