--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -14,11 +14,11 @@
                     <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                2021
                             </div>
                         </div>
                     </div>
@@ -29,11 +29,11 @@
                     <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                2022
                             </div>
                         </div>
                     </div>
@@ -44,11 +44,11 @@
                     <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <!-- <div class="project-category text-faded">
                                 Category
-                            </div>
+                            </div> -->
                             <div class="project-name">
-                                Project Name
+                                2023
                             </div>
                         </div>
                     </div>
