fix guides button?

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,15 +29,9 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
-                <div class="dropdown">
-                    <button class="dropbtn">Guides
-                      <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content">
-                      <a href="https://aeronautics.byu.edu/DBF-guides/">DBF Guides</a>
-                      <a href="https://aeronautics.byu.edu/fundamentals/">Fundamentals</a>
-                    </div>
-                  </div>
+                <li>
+                    <a class="nav-link" href="https://aeronautics.byu.edu/DBF-guides/">Guides</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
