--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -326,13 +326,13 @@ header {
 ::-moz-selection {
     color: white;
     text-shadow: none;
-    background: $theme-dark;
+    background: #b3b3b3;
 }
 
 ::selection {
     color: white;
     text-shadow: none;
-    background: $theme-dark;
+    background: #b3b3b3;
 }
 
 img::selection {
