--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@
 // }
 
 // variables.less
-$theme-primary: #0062B8;
+$theme-primary: #002E5D;
 $theme-dark: #002E5D;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
