--- a/_includes/subteams.html
+++ b/_includes/subteams.html
@@ -1,5 +1,5 @@
-<section class="no-padding" id="subteams">
-    <div class="container" style="padding-top:10px;" >
+<section id="subteams">
+    <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Sub Team Specialties</h2>
