--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="https://aeronautics.byu.edu/DBF-guides/">Guides</a>
+                    <a class="nav-link" href="https://aeronautics.byu.edu/DBFguides.jl/dev/">Guides</a>
                 </li>
             </ul>
         </div>
