add some things

--- a/_includes/aerodynamics.html
+++ b/_includes/aerodynamics.html
@@ -1,4 +1,4 @@
-<section id="subteams">
+<section class="no-padding" id="portfolio">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -6,11 +6,10 @@
                 <hr class="primary">
             </div>
         </div>
-    </div>
-    <div class="container-fluid">
+    </div><div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="https://aeronautics.byu.edu/DBF/subteams/aerodynamics" class="portfolio-box">
+                <a href="#" class="portfolio-box">
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -18,7 +17,7 @@
                                 Category
                             </div> -->
                             <div class="project-name">
-                                Aerodynamics
+                                2021
                             </div>
                         </div>
                     </div>
@@ -33,7 +32,7 @@
                                 Category
                             </div> -->
                             <div class="project-name">
-                                Structures
+                                2022
                             </div>
                         </div>
                     </div>
@@ -48,7 +47,7 @@
                                 Category
                             </div> -->
                             <div class="project-name">
-                                Propulsion
+                                2023
                             </div>
                         </div>
                     </div>
@@ -59,11 +58,11 @@
                     <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <!-- <div class="project-category text-faded">
+                            <div class="project-category text-faded">
                                 Category
-                            </div> -->
+                            </div>
                             <div class="project-name">
-                                Manufacturing
+                                Project Name
                             </div>
                         </div>
                     </div>
@@ -74,11 +73,11 @@
                     <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <!-- <div class="project-category text-faded">
+                            <div class="project-category text-faded">
                                 Category
-                            </div> -->
+                            </div>
                             <div class="project-name">
-                                Systems
+                                Project Name
                             </div>
                         </div>
                     </div>
@@ -89,11 +88,11 @@
                     <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <!-- <div class="project-category text-faded">
+                            <div class="project-category text-faded">
                                 Category
-                            </div> -->
+                            </div>
                             <div class="project-name">
-                                Graphics
+                                Project Name
                             </div>
                         </div>
                     </div>
