--- a/css/airspace.css
+++ b/css/airspace.css
@@ -171,7 +171,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 #service .service-item i {
   font-size: 60px;
-  color: #4A4656;
+  color: #002E5D;
 }
 #service .service-item h4 {
   padding-top: 20px;
