--- a/css/airspace.css
+++ b/css/airspace.css
@@ -206,7 +206,7 @@ font header .navbar-default .navbar-nav li a:hover {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background: #1d192c;
+  background: #002E5D;
   opacity: 0.8;
 }
 #call-to-action h2 {
@@ -224,7 +224,7 @@ font header .navbar-default .navbar-nav li a:hover {
   border: none;
   background-color: #fff;
   font-size: 15px;
-  color: #333333;
+  color: #002E5D;
   margin-top: 30px;
 }
 /*--
