--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
                 <li><a href="{{ site.baseurl }}/teams">Sub Teams</a></li>
                 <li><a href="{{ site.baseurl }}/portfolio">Past Projects</a></li>
-                <li><a href="{{ site.baseurl }}/DBFguides.jl/dev">Guides</a></li>
+                <li><a href="https://aeronautics.byu.edu/DBFguides.jl/dev/">Guides</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
