--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
   <head>
-
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     {% include head.html %}
 
   </head>
