move colors back

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -59,7 +59,7 @@ a:active {
 .section-title p {
   font-family: 'Volkhov', serif;
   font-style: italic;
-  color: #002E5D;
+  color: #333;
 }
 /*--
 	Header Start
