--- a/css/airspace.css
+++ b/css/airspace.css
@@ -141,7 +141,7 @@ font header .navbar-default .navbar-nav li a:hover {
     background-color: #fff;
     font-size: 25px;
     color: #002E5D;
-    margin-top: 40px;
+    margin-top: 30px;
   }
 /*--
 	wrapper Start
@@ -814,3 +814,8 @@ footer .footer-manu ul li a {
 footer .footer-manu ul li a:hover {
   color: #000;
 }
+
+::selection {
+    color: #333;
+    background: #0062B8;
+  }
