--- a/css/airspace.css
+++ b/css/airspace.css
@@ -143,6 +143,10 @@ font header .navbar-default .navbar-nav li a:hover {
     color: #002E5D;
     margin-top: 30px;
   }
+#slider  a.btn-slider:hover{
+    background-color: #002E5D;
+    color: #a2e3a2;
+}
 /*--
 	wrapper Start
 --*/
