--- a/css/airspace.css
+++ b/css/airspace.css
@@ -819,7 +819,8 @@ footer .footer-manu ul li a:hover {
   color: #000;
 }
 
-::selection {
-    color: #333;
+::-moz-selection,
+::selection{
+    color: white;
     background: #0062B8;
   }
