--- a/css/airspace.css
+++ b/css/airspace.css
@@ -143,7 +143,7 @@ font header .navbar-default .navbar-nav li a:hover {
     color: #002E5D;
     margin-top: 25px;
   }
-#slider  a.btn-slider:hover{
+#slider .btn-slider li a:hover{
     background-color: #002E5D;
     color: #a2e3a2;
 }
