--- a/css/airspace.css
+++ b/css/airspace.css
@@ -150,17 +150,16 @@ font header .navbar-default .navbar-nav li a:hover {
 #slider .btn-slider:hover,
 .btn-slider:focus {
   animation: pulse 1s;
-  box-shadow: 0 0.5em 0.5em -0.4em white;
-  transform: translateY(-0.25em);
-  transition: 0.25s;
-  color: #002E5D;
-  border-color:#002E5D;
-  background-color: #a2e3a2;
 }
-
-@keyframes btn-slider {
+@keyframes pulse {
     0% { box-shadow: 0 0 0 0 #a2e3a2; }
-    100% { box-shadow: 0 0 0 2em rgba(white,0); }
+    99% { box-shadow: 0 0 0 2em rgba(white,0);
+            color: #002E5D;
+            border-color:#002E5D;}
+    100% { box-shadow: 0 0.5em 0.5em -0.4em white;
+            color: #002E5D;
+            border-color:#002E5D;
+            background-color: #a2e3a2; }
   }
 /*--
 	wrapper Start
