--- a/css/airspace.css
+++ b/css/airspace.css
@@ -158,7 +158,7 @@ font header .navbar-default .navbar-nav li a:hover {
   }
 
   @keyframes pulse {
-    0% { box-shadow: 0 0 0 0 rgba(#002E5D,1); }
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
     100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white }
   }
 /*--
