--- a/css/airspace.css
+++ b/css/airspace.css
@@ -137,7 +137,8 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 #slider .btn-slider {
     padding: 25px 45px;
-    border: none;
+    border-color:#002E5D;
+    border-width:medium;
     background-color: #fff;
     font-size: 25px;
     color: #002E5D;
@@ -157,10 +158,10 @@ font header .navbar-default .navbar-nav li a:hover {
     border-width:medium;
   }
 
-  @keyframes pulse {
+@keyframes pulse {
     0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
     100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white }
-  }
+}
 /*--
 	wrapper Start
 --*/
