--- a/css/airspace.css
+++ b/css/airspace.css
@@ -154,13 +154,14 @@ font header .navbar-default .navbar-nav li a:hover {
     box-shadow: 0 0.5em 0.5em -0.4em white, 0 0 0 2em rgba(white,0);
     color:#002E5D;
     background-color:#a2e3a2;
-    border-color:#002E5D;
-    border-width:medium;
+
   }
 
 @keyframes pulse {
     0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
-    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+        border-color:#002E5D;
+        border-width:medium; }
 }
 /*--
 	wrapper Start
