--- a/css/airspace.css
+++ b/css/airspace.css
@@ -138,6 +138,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #slider .btn-slider {
     padding: 25px 45px;
     border-color:#002E5D;
+    border-radius: 8px;
     border-width:medium;
     background-color: #fff;
     font-size: 25px;
@@ -160,8 +161,8 @@ font header .navbar-default .navbar-nav li a:hover {
 @keyframes pulse {
     0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
     100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
-        border-color:#002E5D;
-        border-width:medium; }
+    border-color:#002E5D;
+    border-width:medium; }
 }
 /*--
 	wrapper Start
