--- a/css/animate.css
+++ b/css/animate.css
@@ -126,7 +126,7 @@ Copyright (c) 2015 Daniel Eden
 
 /* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
-/* @-webkit-keyframes pulse {
+@-webkit-keyframes pulse {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1);
@@ -163,7 +163,7 @@ Copyright (c) 2015 Daniel Eden
 .pulse {
   -webkit-animation-name: pulse;
   animation-name: pulse;
-} */
+}
 
 @-webkit-keyframes rubberBand {
   0% {
