try another approach

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -135,7 +135,7 @@ font header .navbar-default .navbar-nav li a:hover {
   font-weight: 300;
   letter-spacing: 3px;
 }
-.btn-wow {
+#slider .btn-wow {
     padding: 25px 45px;
     border-color:#002E5D;
     border-radius: 8px;
@@ -151,7 +151,7 @@ font header .navbar-default .navbar-nav li a:hover {
     color: #a2e3a2;
 } */
 
-.btn-wow:hover,
+#slider .btn-wow:hover,
 .btn-wow:focus {
     animation: wow 1s;
     box-shadow: 0 0.5em 0.5em -0.4em white, 0 0 0 2em rgba(white,0);
