--- a/css/airspace.css
+++ b/css/airspace.css
@@ -167,6 +167,41 @@ font header .navbar-default .navbar-nav li a:hover {
     border-color:#002E5D;
     border-width:medium; }
 }
+
+@keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
+
+  @-moz-keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
+
+  @-webkit-keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
+
+  @-o-keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
+
+  @-ms-keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
 /*--
 	wrapper Start
 --*/
