add in missing line

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -137,6 +137,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 
 .btn-wow {
+    transition: 0.25s;
     padding: 25px 45px;
     border-color:#002E5D;
     border-radius: 8px;
