--- a/css/airspace.css
+++ b/css/airspace.css
@@ -136,7 +136,7 @@ font header .navbar-default .navbar-nav li a:hover {
   letter-spacing: 3px;
 }
 
-mybutton {
+.apply {
     transition: 0.25s;
     padding: 25px 45px;
     border: solid;
@@ -151,7 +151,7 @@ mybutton {
 }
 
 
-.apply:hover,
+:hover,
 .apply:focus {
     animation: wow 0.5s;
     box-shadow: 0 0.5em 0.5em -0.4em white, 0 0 0 2em rgba(white,0);
