try a different place

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -136,10 +136,9 @@ font header .navbar-default .navbar-nav li a:hover {
   letter-spacing: 3px;
 }
 
-.apply {
+.btn-wow {
     transition: 0.25s;
     padding: 25px 45px;
-    border: solid;
     border-color:#002E5D;
     border-radius: 8px;
     border-width: medium;
@@ -148,16 +147,18 @@ font header .navbar-default .navbar-nav li a:hover {
     color: #002E5D;
     font-weight: bold;
     margin-top: 25px;
-}
+  }
+/* #slider .btn-slider:hover{
+    background-color: #002E5D;
+    color: #a2e3a2;
+} */
 
-
-.apply:hover,
-.apply:focus {
-    animation: wow 0.5s;
+.btn-wow:hover,
+.btn-wow:focus {
+    animation: wow 1s;
     box-shadow: 0 0.5em 0.5em -0.4em white, 0 0 0 2em rgba(white,0);
     color:#002E5D;
     background-color:#a2e3a2;
-  border-width:medium;
 
   }
 
