--- a/css/airspace.css
+++ b/css/airspace.css
@@ -136,7 +136,7 @@ font header .navbar-default .navbar-nav li a:hover {
   letter-spacing: 3px;
 }
 
-.btn-wow {
+#slider .btn-wow {
     transition: 0.25s;
     padding: 25px 45px;
     border-style: solid;
