--- a/css/airspace.css
+++ b/css/airspace.css
@@ -135,19 +135,18 @@ font header .navbar-default .navbar-nav li a:hover {
   font-weight: 300;
   letter-spacing: 3px;
 }
-
 #slider .btn-wow {
     transition: 0.25s;
     padding: 25px 45px;
-    border-style: solid;
-    border-color:#002E5D;
+    /* border-style: solid; */
+    /* border-color:#002E5D; */
     border-radius: 8px;
-    border-width: medium;
+    /* border-width: medium; */
     background-color: #fff;
     font-size: 25px;
     color: #002E5D;
     font-weight: bold;
-    margin-top: 35px;
+    /* margin-top: 35px; */
   }
 /* #slider .btn-slider:hover{
     background-color: #002E5D;
