--- a/css/airspace.css
+++ b/css/airspace.css
@@ -138,15 +138,13 @@ font header .navbar-default .navbar-nav li a:hover {
 #slider .btn-wow {
     transition: 0.25s;
     padding: 25px 45px;
-    /* border-style: solid; */
-    /* border-color:#002E5D; */
+    border: none;
     border-radius: 8px;
-    /* border-width: medium; */
     background-color: #fff;
     font-size: 25px;
     color: #002E5D;
     font-weight: bold;
-    /* margin-top: 35px; */
+    margin-top: 30px;
   }
 /* #slider .btn-slider:hover{
     background-color: #002E5D;
