--- a/css/airspace.css
+++ b/css/airspace.css
@@ -287,6 +287,28 @@ font header .navbar-default .navbar-nav li a:hover {
   color: #002E5D;
   margin-top: 30px;
 }
+
+#call-to-action .btn-call-to-action:hover {
+    transition: 2s;
+    padding: 15px 35px;
+    border-style: flat;
+    border-color: #002E5D;
+    background-color: #a2e3a2;
+    font-size: 15px;
+    color: #002E5D;
+    margin-top: 30px;
+  }
+
+  #call-to-action .btn-call-to-action:focus {
+    transition: 2s;
+    padding: 15px 35px;
+    border-style: flat;
+    border-color: #002E5D;
+    background-color: #a2e3a2;
+    font-size: 15px;
+    color: #002E5D;
+    margin-top: 30px;
+  }
 /*--
 	Feature Start
 --*/
