--- a/css/airspace.css
+++ b/css/airspace.css
@@ -136,7 +136,6 @@ font header .navbar-default .navbar-nav li a:hover {
   letter-spacing: 3px;
 }
 #slider .btn-wow {
-    transition: 0.25s;
     padding: 25px 45px;
     border: none;
     border-radius: 8px;
@@ -146,10 +145,68 @@ font header .navbar-default .navbar-nav li a:hover {
     font-weight: bold;
     margin-top: 30px;
   }
-/* #slider .btn-slider:hover{
-    background-color: #002E5D;
-    color: #a2e3a2;
-} */
+#slider .btn-wow:hover {
+    animation: wow 1s;
+    box-shadow: 0 0.5em 0.5em -0.4em white, 0 0 0 2em rgba(white,0);
+    transition: 1s;
+    padding: 25px 45px;
+    border-style: flat;
+    border-color: #002E5D;
+    border-radius: 8px;
+    background-color: #a2e3a2;
+    font-size: 25px;
+    color: #002E5D;
+    font-weight: bold;
+    margin-top: 30px;
+}
+#slider .btn-wow:focus {
+    animation: wow 1s;
+    box-shadow: 0 0.5em 0.5em -0.4em white, 0 0 0 2em rgba(white,0);
+    padding: 25px 45px;
+    border-style: flat;
+    border-color: #002E5D;
+    border-radius: 8px;
+    background-color: #a2e3a2;
+    font-size: 25px;
+    color: #002E5D;
+    font-weight: bold;
+    margin-top: 30px;
+}
+
+@keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
+
+@-moz-keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
+
+@-webkit-keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
+
+@-o-keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
+
+@-ms-keyframes wow {
+    0% { box-shadow: 0 0 0 0 rgba(#a2e3a2,1); }
+    100% { box-shadow: 0 0 0 2em rgba(white,0), 0 0.5em 0.5em -0.4em white;
+    border-color:#002E5D;
+    border-width:medium; }
+}
 
 /* .btn-wow:hover,
 .btn-wow:focus {
@@ -289,7 +346,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 
 #call-to-action .btn-call-to-action:hover {
-    transition: 2s;
+    transition: 1s;
     padding: 15px 35px;
     border-style: flat;
     border-color: #002E5D;
@@ -300,7 +357,7 @@ font header .navbar-default .navbar-nav li a:hover {
   }
 
   #call-to-action .btn-call-to-action:focus {
-    transition: 2s;
+    transition: 1s;
     padding: 15px 35px;
     border-style: flat;
     border-color: #002E5D;
