--- a/css/airspace.css
+++ b/css/airspace.css
@@ -360,7 +360,7 @@ font header .navbar-default .navbar-nav li a:hover {
     transition: 1s;
     padding: 15px 35px;
     border-style: flat;
-    border-color: #002E5D;
+    border-color: white;
     background-color: #a2e3a2;
     font-size: 15px;
     color: #002E5D;
