--- a/css/airspace.css
+++ b/css/airspace.css
@@ -118,7 +118,7 @@ font header .navbar-default .navbar-nav li a:hover {
   opacity: 0.75;
 }
 #slider .block {
-  color: #E3E3E4;
+  color: #333;
 }
 #slider .block h1 {
   font-family: 'Roboto', sans-serif;
@@ -226,7 +226,7 @@ font header .navbar-default .navbar-nav li a:hover {
   margin: 0;
 }
 #intro .block p {
-  color: #7B7B7B;
+  color: #333;
   padding-top: 20px;
 }
 #intro .block img {
@@ -256,10 +256,10 @@ font header .navbar-default .navbar-nav li a:hover {
 #service .service-item h4 {
   padding-top: 20px;
   margin: 0;
-  color: #666;
+  color: #333;
 }
 #service .service-item p {
-  color: #888;
+  color: #333;
   padding-top: 10px;
   margin: 0;
   font-size: 14px;
@@ -363,7 +363,7 @@ font header .navbar-default .navbar-nav li a:hover {
   margin-bottom: 30px;
 }
 #feature p {
-  color: #8d8f92;
+  color: #333;
   margin-bottom: 20px;
 }
 #feature .btn-view-works {
@@ -783,7 +783,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #contact-form .block button {
   width: 100%;
   height: 60px;
-  background: #47424C;
+  background: #333;
   border: none;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
@@ -811,7 +811,7 @@ font header .navbar-default .navbar-nav li a:hover {
   display: inline-block;
 }
 .social-icons i {
-  color: #2C2C2C;
+  color: #002E5D;
   margin-right: 25px;
   font-size: 25px;
 }
@@ -838,7 +838,7 @@ font header .navbar-default .navbar-nav li a:hover {
   padding-bottom: 30px;
 }
 #contact-box .block p {
-  color: #5C5C5C;
+  color: #333;
   display: block;
 }
 /*--
@@ -871,7 +871,7 @@ font header .navbar-default .navbar-nav li a:hover {
 .heading p {
   font-size: 18px;
   line-height: 40px;
-  color: #292929;
+  color: #333;
   font-weight: 300;
 }
 /*---------------------------*/
@@ -879,7 +879,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	footer Start
 --*/
 footer {
-  background: #F5F5F5;
+  background: white;
   text-align: center;
   padding-top: 48px;
   padding-bottom: 55px;
@@ -887,10 +887,10 @@ footer {
 footer p {
   font-size: 13px;
   line-height: 25px;
-  color: #919191;
+  color: #555;
 }
 footer a {
-  color: #595959;
+  color: #555;
 }
 footer .footer-manu {
   padding-bottom: 25px;
@@ -905,7 +905,7 @@ footer .footer-manu ul li {
 }
 footer .footer-manu ul li a {
   display: inline-block;
-  color: #494949;
+  color: #555;
 }
 footer .footer-manu ul li a:hover {
   color: #000;
