--- a/css/airspace.css
+++ b/css/airspace.css
@@ -763,9 +763,9 @@ font header .navbar-default .navbar-nav li a:hover {
   margin: 0px;
 }
 #contact-form .block form .form-group .form-control {
-  background: #F6F8FA;
+  background: white;
   height: 60px;
-  border: 1px solid #EEF2F6;
+  border: 1px solid white;
   box-shadow: none;
   width: 100%;
 }
@@ -774,9 +774,9 @@ font header .navbar-default .navbar-nav li a:hover {
   margin: 0px;
 }
 #contact-form .block form .form-group-2 textarea {
-  background: #F6F8FA;
+  background: white;
   height: 135px;
-  border: 1px solid #EEF2F6;
+  border: 1px solid white;
   box-shadow: none;
   width: 100%;
 }
@@ -871,7 +871,7 @@ font header .navbar-default .navbar-nav li a:hover {
 .heading p {
   font-size: 18px;
   line-height: 40px;
-  color: #333;
+  color: white;
   font-weight: 300;
 }
 /*---------------------------*/
