actually fix color

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -118,7 +118,7 @@ font header .navbar-default .navbar-nav li a:hover {
   opacity: 0.75;
 }
 #slider .block {
-  color: #333;
+  color: white;
 }
 #slider .block h1 {
   font-family: 'Roboto', sans-serif;
