--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@ layout: page
         <div>
           <div class="block">
             <h1>{{ page.title }}</h1>
-            <div class="post-info-wrapper">
+            <!-- <div class="post-info-wrapper">
               <p class="italic">By <span class="bold">{{ page.author }}</span> on <span class="bold">{{ page.date | date: "%B %-d, %Y" }}</span></p>
-            </div>
+            </div> -->
             <hr />
             <p>{{ content }}</p>
           </div>
@@ -21,6 +21,6 @@ layout: page
     </div>
   </section>
 </div>
-<p class="center-text" style="padding: 30px;">
+<!-- <p class="center-text" style="padding: 30px;">
   <a href="{{ site.baseurl }}/blog">Back to blog</a>
-</p>
+</p> -->
