try to fix coloring and tables

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -915,3 +915,9 @@ footer .footer-manu ul li a:hover {
     color: white;
     background: #0062B8;
   }
+
+
+/* table padding */
+th, td {
+    padding: 20px;
+  }
