--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@
 
 
 /* table settings */
-th, td {
+table, th, td {
     padding: 20px;
-    border-color:#333;
-  }
+    border: 1px dotted #ddd;
+    border-collapse: collapse;
+}
