--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
                 <li><a href="{{ site.baseurl }}/teams">Sub Teams</a></li>
-                <li><a href="#">Past Projects</a></li>
+                <li><a href="{{ site.baseurl }}/members">Current Members</a></li>
                 <li><a href="https://aeronautics.byu.edu/DBFguides.jl/dev/">Guides</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
