--- a/css/airspace.css
+++ b/css/airspace.css
@@ -545,12 +545,12 @@ font header .navbar-default .navbar-nav li a:hover {
   top: 23px;
   margin: 0 auto;
   color: #fff;
-  text-shadow: 0 1px 0px rgba(0, 0, 0, 0.9);
-  -webkit-transition: all 0.4s ease-in-out;
+  text-shadow: 0 1px 0px #002f5d6b;
+  /* -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out; */
 }
 #portfolio-work .block .portfolio-menu ul li:hover:before {
   content: "\f0d7";
@@ -564,12 +564,12 @@ font header .navbar-default .navbar-nav li a:hover {
   top: 24px;
   margin: 0 auto;
   color: #fff;
-  text-shadow: 0 1px 0px rgba(0, 0, 0, 0.9);
-  -webkit-transition: all 0.4s ease-in-out;
+  text-shadow: 0 1px 0px #002f5d6b;
+  /* -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out; */
 }
 #portfolio-work .block .portfolio-contant ul li {
   float: left;
@@ -616,7 +616,7 @@ font header .navbar-default .navbar-nav li a:hover {
   bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: #002f5d6b;
   opacity: 0;
   -webkit-transition: .3s all;
   -o-transition: .3s all;
