--- a/css/airspace.css
+++ b/css/airspace.css
@@ -610,10 +610,12 @@ font header .navbar-default .navbar-nav li a:hover {
   width: 100%;
   height: auto;
 }
-#portfolio-work .block .portfolio-contant ul img:hover {
+.static {
   width: 100%;
   height: auto;
-  opacity: 0;
+}
+.static:hover {
+  opacity:0;
 }
 #portfolio-work .block .portfolio-contant .overly {
   position: absolute;
