try something else

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -579,7 +579,7 @@ font header .navbar-default .navbar-nav li a:hover {
   position: relative;
 }
 #portfolio-work .block .portfolio-contant ul li:hover .overly {
-  opacity: 1;
+  opacity: 0;
 }
 #portfolio-work .block .portfolio-contant ul li:hover .position-center {
   position: absolute;
@@ -616,7 +616,7 @@ font header .navbar-default .navbar-nav li a:hover {
   bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: #002E5D;
   opacity: 1;
   -webkit-transition: .3s all;
   -o-transition: .3s all;
