--- a/css/airspace.css
+++ b/css/airspace.css
@@ -603,6 +603,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 #portfolio-work .block .portfolio-contant ul li a p {
   font-size: 15px;
+  opacity: 0;
 }
 #portfolio-work .block .portfolio-contant ul li a span {
   font-style: italic;
