try adding a banner

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -927,7 +927,7 @@ footer .footer-manu ul li a:hover {
 
 
   .banner {
-    background: #a2e3a2;
+    background: white;
   }
 
   .banner__content {
