--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
-                <li><a href="{{ site.baseurl }}/#about">About</a></li>
+                <li><a href="{{ site.baseurl }}/#intro">About</a></li>
                 <li><a href="{{ site.baseurl }}/teams">Sub Teams</a></li>
                 <li><a href="{{ site.baseurl }}/members">Current Members</a></li>
                 <li><a href="https://aeronautics.byu.edu/DBFguides.jl/dev/">Guides</a></li>
