add some padding to boxes

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -593,7 +593,7 @@ font header .navbar-default .navbar-nav li a:hover {
   transform: translate(-50%, 42%);
   color: #002E5D;
   background-color:rgba(255,255,255,0.75); border-radius: 5px;
-  /* padding: 5px; */
+  padding: 5px;
 }
 #portfolio-work .block .portfolio-contant ul li a {
   display: block;
