try adding archive

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,7 @@
                 <li><a href="{{ site.baseurl }}/teams">Sub Teams</a></li>
                 <li><a href="{{ site.baseurl }}/members">Current Members</a></li>
                 <li><a href="https://aeronautics.byu.edu/DBFguides.jl/dev/">Guides</a></li>
+                <li><a href="https://aeronautics.byu.edu/DBFguides.jl/archive/">Past Projects</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
